@@ -1,3 +1,8 @@
+master
+ - add support for magnitude estimation for data fetched from an FDSN server
+   (using full response)
+ - depending on obspy >=1.1.0 now
+
 0.4.1
  - fix minor bug that prevents 0.4.0 from running
  - switch obspy dependency version from >=1.* to >1.0.3 (the import reroutes in
